parser/parser.output
Terminals unused in grammar

    LEN
    ALLOCATED
    OPEN
    CLOSE
    INQUIRE
    WRITE
    READ
    ERROR
    CONCAT
    PP_ELIF
    LOWER_THAN_ELSE


Grammar

    0 $accept: start $end

    1 start: compilation_units
    2      | free_form

    3 compilation_units: compilation_unit
    4                  | compilation_units compilation_unit

    5 compilation_unit: program_unit
    6                 | module_unit

    7 free_form: preamble declarations executables

    8 program_unit: PROGRAM IDENTIFIER program_body END PROGRAM IDENTIFIER
    9             | PROGRAM IDENTIFIER program_body END PROGRAM

   10 module_unit: MODULE IDENTIFIER module_body END MODULE IDENTIFIER
   11            | MODULE IDENTIFIER module_body END MODULE

   12 program_body: preamble declarations executables contains_block

   13 module_body: preamble declarations executables contains_block

   14 $@1: ε

   15 contains_block: CONTAINS $@1 subprogram_list
   16               | ε

   17 declarations: ε
   18             | declaration declarations

   19 preamble: ε
   20         | preamble pp_item

   21 pp_item: pp_define_undef
   22        | pp_if_block

   23 declaration: type_spec declaration_attributes DECL_SEP declarator_list
   24            | IMPLICIT NONE
   25            | USE identifier
   26            | type_def

   27 type_spec: INTEGER
   28          | REAL
   29          | LOGICAL
   30          | char_type_spec
   31          | TYPE LPAREN identifier RPAREN
   32          | CLASS identifier
   33          | COMPLEX

   34 char_type_spec: CHARACTER char_len_opt

   35 char_len_opt: ε
   36             | LPAREN LENGTH_SPECIFIER ASSIGN char_len_value RPAREN

   37 char_len_value: COLON
   38               | INT_CONST
   39               | identifier

   40 attributes: attribute
   41           | attribute COMMA attributes

   42 attribute: ALLOCATABLE
   43          | POINTER
   44          | TARGET
   45          | INTENT LPAREN IN RPAREN
   46          | INTENT LPAREN OUT RPAREN
   47          | INTENT LPAREN INOUT RPAREN

   48 declaration_attributes: ε
   49                       | COMMA attributes

   50 identifier_list: identifier
   51                | identifier COMMA identifier_list

   52 declarator_list: declarator
   53                | declarator COMMA declarator_list

   54 $@2: ε

   55 declarator: identifier array_spec_opt $@2 init_opt

   56 array_spec_opt: ε
   57               | array_spec

   58 array_spec: LPAREN array_spec_list RPAREN

   59 array_spec_list: array_spec_item
   60                | array_spec_list COMMA array_spec_item

   61 array_spec_item: ASSUMED_RANK_SPECIFIER
   62                | COLON
   63                | expression
   64                | expression COLON
   65                | COLON expression
   66                | expression COLON expression

   67 init_opt: ε
   68         | ASSIGN expression

   69 executables: ε
   70            | executables executable

   71 executable: assignment_stmt
   72           | if_stmt
   73           | print_stmt
   74           | allocate_stmt
   75           | deallocate_stmt
   76           | do_stmt
   77           | dowhile_stmt
   78           | select_rank_stmt
   79           | select_stmt
   80           | call_stmt
   81           | return_stmt
   82           | stop_stmt
   83           | pointer_stmt

   84 assignment_stmt: variable_ref ASSIGN expression

   85 $@3: ε

   86 $@4: ε

   87 if_stmt: IF LPAREN expression RPAREN THEN $@3 executables ELSE $@4 executables ENDIF

   88 $@5: ε

   89 do_stmt: DO IDENTIFIER ASSIGN expression COMMA expression step_opt $@5 executables END DO

   90 $@6: ε

   91 $@7: ε

   92 dowhile_stmt: DO WHILE LPAREN $@6 expression RPAREN $@7 executables END DO

   93 $@8: ε

   94 select_stmt: SELECT CASE LPAREN expression RPAREN $@8 case_blocks END SELECT

   95 $@9: ε

   96 select_rank_stmt: SELECT RANK LPAREN identifier RPAREN $@9 rank_blocks END SELECT

   97 rank_blocks: rank_block
   98            | rank_blocks rank_block

   99 $@10: ε

  100 rank_block: RANK LPAREN rank_selector RPAREN $@10 executables

  101 $@11: ε

  102 rank_block: RANK DEFAULT $@11 executables

  103 rank_selector: INT_CONST
  104              | MUL_OP

  105 case_blocks: case_block
  106            | case_blocks case_block

  107 $@12: ε

  108 case_block: CASE LPAREN expression RPAREN $@12 executables

  109 $@13: ε

  110 case_block: CASE DEFAULT $@13 executables

  111 call_stmt: CALL callable_name LPAREN argument_values RPAREN

  112 callable_name: identifier
  113              | INTRINSIC

  114 return_stmt: RETURN

  115 stop_stmt: STOP
  116          | STOP INT_CONST
  117          | STOP STRING

  118 pointer_stmt: variable_ref PTR_ASSIGN variable_ref

  119 step_opt: ε
  120         | COMMA expression

  121 print_stmt: PRINT MUL_OP COMMA print_args

  122 print_args: expression
  123           | print_args COMMA expression

  124 allocate_stmt: ALLOCATE LPAREN argument_values RPAREN

  125 deallocate_stmt: DEALLOCATE LPAREN argument_values RPAREN

  126 expression: expression ADD_OP expression
  127           | expression MUL_OP expression
  128           | expression EXPONENT expression
  129           | expression REL_OP expression
  130           | expression LOGICAL_OP expression
  131           | factor
  132           | ADD_OP expression
  133           | LOGICAL_OP expression

  134 factor: primary

  135 primary: INT_CONST
  136        | REAL_CONST
  137        | LOGICAL_CONST
  138        | STRING
  139        | complex_literal
  140        | LPAREN expression RPAREN
  141        | variable_ref primary_suffix_opt

  142 complex_literal: LPAREN expression COMMA expression RPAREN

  143 primary_suffix_opt: ε
  144                   | LPAREN argument_values RPAREN

  145 variable_ref: identifier
  146             | variable_ref DERIVED_TYPE_COMPONENT identifier

  147 subprogram_list: ε
  148                | subprogram_list subprogram

  149 subprogram: SUBROUTINE identifier LPAREN identifier_list_opt RPAREN program_body END SUBROUTINE
  150           | SUBROUTINE identifier LPAREN identifier_list_opt RPAREN program_body END SUBROUTINE identifier
  151           | FUNCTION identifier LPAREN identifier_list_opt RPAREN program_body END FUNCTION
  152           | FUNCTION identifier LPAREN identifier_list_opt RPAREN program_body END FUNCTION identifier
  153           | RECURSIVE FUNCTION identifier LPAREN identifier_list_opt RPAREN RESULT LPAREN identifier RPAREN program_body END FUNCTION
  154           | RECURSIVE FUNCTION identifier LPAREN identifier_list_opt RPAREN RESULT LPAREN identifier RPAREN program_body END FUNCTION identifier

  155 argument_values: ε
  156                | expression
  157                | expression COMMA argument_values

  158 identifier_list_opt: ε
  159                    | identifier_list

  160 identifier: IDENTIFIER
  161           | RESULT

  162 type_def: TYPE DECL_SEP identifier type_def_body END_TYPE identifier

  163 type_def_body: ε
  164              | type_def_declarations

  165 type_def_declarations: type_def_declaration
  166                      | type_def_declarations type_def_declaration

  167 type_def_declaration: type_spec declaration_attributes DECL_SEP declarator_list

  168 pp_define_undef: PP_DEFINE identifier
  169                | PP_DEFINE identifier INT_CONST
  170                | PP_UNDEF identifier

  171 pp_if_block: PP_IFDEF identifier declarations pp_else_opt PP_ENDIF
  172            | PP_IFNDEF identifier declarations pp_else_opt PP_ENDIF
  173            | PP_IF identifier declarations pp_else_opt PP_ENDIF
  174            | PP_IF INT_CONST declarations pp_else_opt PP_ENDIF

  175 pp_else_opt: ε
  176            | PP_ELSE declarations


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 8 9
    MODULE (259) 10 11
    END (260) 8 9 10 11 89 92 94 96 149 150 151 152 153 154
    CONTAINS (261) 15
    USE (262) 25
    NONE (263) 24
    IMPLICIT (264) 24
    INTEGER (265) 27
    REAL (266) 28
    LOGICAL (267) 29
    CHARACTER (268) 34
    TYPE (269) 31 162
    CLASS (270) 32
    END_TYPE (271) 162
    COMPLEX (272) 33
    IF (273) 87
    THEN (274) 87
    ELSE (275) 87
    DO (276) 89 92
    ENDIF (277) 87
    LEN (278)
    WHILE (279) 92
    SELECT (280) 94 96
    CASE (281) 94 108 110
    DEFAULT (282) 102 110
    RANK (283) 96 100 102
    STOP (284) 115 116 117
    PRINT (285) 121
    CALL (286) 111
    SUBROUTINE (287) 149 150
    FUNCTION (288) 151 152 153 154
    RETURN (289) 114
    RECURSIVE (290) 153 154
    RESULT (291) 153 154 161
    ALLOCATE (292) 124
    DEALLOCATE (293) 125
    ALLOCATED (294)
    POINTER (295) 43
    TARGET (296) 44
    ALLOCATABLE (297) 42
    INTENT (298) 45 46 47
    IN (299) 45
    OUT (300) 46
    INOUT (301) 47
    OPEN (302)
    CLOSE (303)
    INQUIRE (304)
    WRITE (305)
    READ (306)
    ERROR (307)
    LPAREN (308) 31 36 45 46 47 58 87 92 94 96 100 108 111 124 125 140 142 144 149 150 151 152 153 154
    RPAREN (309) 31 36 45 46 47 58 87 92 94 96 100 108 111 124 125 140 142 144 149 150 151 152 153 154
    COMMA (310) 41 49 51 53 60 89 120 121 123 142 157
    COLON (311) 37 62 64 65 66
    ASSUMED_RANK_SPECIFIER (312) 61
    CONCAT (313)
    PTR_ASSIGN (314) 118
    PP_DEFINE (315) 168 169
    PP_UNDEF (316) 170
    PP_IFDEF (317) 171
    PP_IFNDEF (318) 172
    PP_IF (319) 173 174
    PP_ELIF (320)
    PP_ELSE (321) 176
    PP_ENDIF (322) 171 172 173 174
    LENGTH_SPECIFIER (323) 36
    IDENTIFIER <text> (324) 8 9 10 11 89 160
    INT_CONST <text> (325) 38 103 116 135 169 174
    REAL_CONST <text> (326) 136
    STRING <text> (327) 117 138
    LOGICAL_CONST <text> (328) 137
    INTRINSIC <text> (329) 113
    ADD_OP <text> (330) 126 132
    MUL_OP <text> (331) 104 121 127
    REL_OP <text> (332) 129
    LOGICAL_OP <text> (333) 130 133
    EXPONENT <text> (334) 128
    ASSIGN (335) 36 68 84 89
    DECL_SEP (336) 23 162 167
    DERIVED_TYPE_COMPONENT (337) 146
    UNARY (338)
    LOWER_THAN_ELSE (339)


Nonterminals, with rules where they appear

    $accept (85)
        on left: 0
    start <node> (86)
        on left: 1 2
        on right: 0
    compilation_units <node> (87)
        on left: 3 4
        on right: 1 4
    compilation_unit <node> (88)
        on left: 5 6
        on right: 3 4
    free_form <node> (89)
        on left: 7
        on right: 2
    program_unit <node> (90)
        on left: 8 9
        on right: 5
    module_unit <node> (91)
        on left: 10 11
        on right: 6
    program_body <node> (92)
        on left: 12
        on right: 8 9 149 150 151 152 153 154
    module_body <node> (93)
        on left: 13
        on right: 10 11
    contains_block <node> (94)
        on left: 15 16
        on right: 12 13
    $@1 (95)
        on left: 14
        on right: 15
    declarations <node> (96)
        on left: 17 18
        on right: 7 12 13 18 171 172 173 174 176
    preamble <node> (97)
        on left: 19 20
        on right: 7 12 13 20
    pp_item <node> (98)
        on left: 21 22
        on right: 20
    declaration <node> (99)
        on left: 23 24 25 26
        on right: 18
    type_spec <node> (100)
        on left: 27 28 29 30 31 32 33
        on right: 23 167
    char_type_spec <node> (101)
        on left: 34
        on right: 30
    char_len_opt <node> (102)
        on left: 35 36
        on right: 34
    char_len_value <node> (103)
        on left: 37 38 39
        on right: 36
    attributes <node> (104)
        on left: 40 41
        on right: 41 49
    attribute <node> (105)
        on left: 42 43 44 45 46 47
        on right: 40 41
    declaration_attributes <node> (106)
        on left: 48 49
        on right: 23 167
    identifier_list <node> (107)
        on left: 50 51
        on right: 51 159
    declarator_list <node> (108)
        on left: 52 53
        on right: 23 53 167
    declarator <node> (109)
        on left: 55
        on right: 52 53
    $@2 (110)
        on left: 54
        on right: 55
    array_spec_opt <node> (111)
        on left: 56 57
        on right: 55
    array_spec <node> (112)
        on left: 58
        on right: 57
    array_spec_list <node> (113)
        on left: 59 60
        on right: 58 60
    array_spec_item <node> (114)
        on left: 61 62 63 64 65 66
        on right: 59 60
    init_opt <node> (115)
        on left: 67 68
        on right: 55
    executables <node> (116)
        on left: 69 70
        on right: 7 12 13 70 87 89 92 100 102 108 110
    executable <node> (117)
        on left: 71 72 73 74 75 76 77 78 79 80 81 82 83
        on right: 70
    assignment_stmt <tac> (118)
        on left: 84
        on right: 71
    if_stmt <node> (119)
        on left: 87
        on right: 72
    $@3 (120)
        on left: 85
        on right: 87
    $@4 (121)
        on left: 86
        on right: 87
    do_stmt <node> (122)
        on left: 89
        on right: 76
    $@5 (123)
        on left: 88
        on right: 89
    dowhile_stmt <node> (124)
        on left: 92
        on right: 77
    $@6 (125)
        on left: 90
        on right: 92
    $@7 (126)
        on left: 91
        on right: 92
    select_stmt <node> (127)
        on left: 94
        on right: 79
    $@8 (128)
        on left: 93
        on right: 94
    select_rank_stmt <node> (129)
        on left: 96
        on right: 78
    $@9 (130)
        on left: 95
        on right: 96
    rank_blocks <node> (131)
        on left: 97 98
        on right: 96 98
    rank_block <node> (132)
        on left: 100 102
        on right: 97 98
    $@10 (133)
        on left: 99
        on right: 100
    $@11 (134)
        on left: 101
        on right: 102
    rank_selector <node> (135)
        on left: 103 104
        on right: 100
    case_blocks <node> (136)
        on left: 105 106
        on right: 94 106
    case_block <node> (137)
        on left: 108 110
        on right: 105 106
    $@12 (138)
        on left: 107
        on right: 108
    $@13 (139)
        on left: 109
        on right: 110
    call_stmt <node> (140)
        on left: 111
        on right: 80
    callable_name <text> (141)
        on left: 112 113
        on right: 111
    return_stmt <node> (142)
        on left: 114
        on right: 81
    stop_stmt <node> (143)
        on left: 115 116 117
        on right: 82
    pointer_stmt <node> (144)
        on left: 118
        on right: 83
    step_opt <tac> (145)
        on left: 119 120
        on right: 89
    print_stmt <node> (146)
        on left: 121
        on right: 73
    print_args <args> (147)
        on left: 122 123
        on right: 121 123
    allocate_stmt <node> (148)
        on left: 124
        on right: 74
    deallocate_stmt <node> (149)
        on left: 125
        on right: 75
    expression <tac> (150)
        on left: 126 127 128 129 130 131 132 133
        on right: 63 64 65 66 68 84 87 89 92 94 108 120 122 123 126 127 128 129 130 132 133 140 142 156 157
    factor <tac> (151)
        on left: 134
        on right: 131
    primary <tac> (152)
        on left: 135 136 137 138 139 140 141
        on right: 134
    complex_literal <tac> (153)
        on left: 142
        on right: 139
    primary_suffix_opt <args> (154)
        on left: 143 144
        on right: 141
    variable_ref <tac> (155)
        on left: 145 146
        on right: 84 118 141 146
    subprogram_list <node> (156)
        on left: 147 148
        on right: 15 148
    subprogram <node> (157)
        on left: 149 150 151 152 153 154
        on right: 148
    argument_values <args> (158)
        on left: 155 156 157
        on right: 111 124 125 144 157
    identifier_list_opt <node> (159)
        on left: 158 159
        on right: 149 150 151 152 153 154
    identifier <text> (160)
        on left: 160 161
        on right: 25 31 32 39 50 51 55 96 112 145 146 149 150 151 152 153 154 162 168 169 170 171 172 173
    type_def <node> (161)
        on left: 162
        on right: 26
    type_def_body <node> (162)
        on left: 163 164
        on right: 162
    type_def_declarations <node> (163)
        on left: 165 166
        on right: 164 166
    type_def_declaration <node> (164)
        on left: 167
        on right: 165 166
    pp_define_undef <node> (165)
        on left: 168 169 170
        on right: 21
    pp_if_block <node> (166)
        on left: 171 172 173 174
        on right: 22
    pp_else_opt <node> (167)
        on left: 175 176
        on right: 171 172 173 174


State 0

    0 $accept: • start $end

    PROGRAM  shift, and go to state 1
    MODULE   shift, and go to state 2

    $default  reduce using rule 19 (preamble)

    start              go to state 3
    compilation_units  go to state 4
    compilation_unit   go to state 5
    free_form          go to state 6
    program_unit       go to state 7
    module_unit        go to state 8
    preamble           go to state 9


State 1

    8 program_unit: PROGRAM • IDENTIFIER program_body END PROGRAM IDENTIFIER
    9             | PROGRAM • IDENTIFIER program_body END PROGRAM

    IDENTIFIER  shift, and go to state 10


State 2

   10 module_unit: MODULE • IDENTIFIER module_body END MODULE IDENTIFIER
   11            | MODULE • IDENTIFIER module_body END MODULE

    IDENTIFIER  shift, and go to state 11


State 3

    0 $accept: start • $end

    $end  shift, and go to state 12


State 4

    1 start: compilation_units •
    4 compilation_units: compilation_units • compilation_unit

    PROGRAM  shift, and go to state 1
    MODULE   shift, and go to state 2

    $default  reduce using rule 1 (start)

    compilation_unit  go to state 13
    program_unit      go to state 7
    module_unit       go to state 8


State 5

    3 compilation_units: compilation_unit •

    $default  reduce using rule 3 (compilation_units)


State 6

    2 start: free_form •

    $default  reduce using rule 2 (start)


State 7

    5 compilation_unit: program_unit •

    $default  reduce using rule 5 (compilation_unit)


State 8

    6 compilation_unit: module_unit •

    $default  reduce using rule 6 (compilation_unit)


State 9

    7 free_form: preamble • declarations executables
   20 preamble: preamble • pp_item

    USE        shift, and go to state 14
    IMPLICIT   shift, and go to state 15
    INTEGER    shift, and go to state 16
    REAL       shift, and go to state 17
    LOGICAL    shift, and go to state 18
    CHARACTER  shift, and go to state 19
    TYPE       shift, and go to state 20
    CLASS      shift, and go to state 21
    COMPLEX    shift, and go to state 22
    PP_DEFINE  shift, and go to state 23
    PP_UNDEF   shift, and go to state 24
    PP_IFDEF   shift, and go to state 25
    PP_IFNDEF  shift, and go to state 26
    PP_IF      shift, and go to state 27

    $default  reduce using rule 17 (declarations)

    declarations     go to state 28
    pp_item          go to state 29
    declaration      go to state 30
    type_spec        go to state 31
    char_type_spec   go to state 32
    type_def         go to state 33
    pp_define_undef  go to state 34
    pp_if_block      go to state 35


State 10

    8 program_unit: PROGRAM IDENTIFIER • program_body END PROGRAM IDENTIFIER
    9             | PROGRAM IDENTIFIER • program_body END PROGRAM

    $default  reduce using rule 19 (preamble)

    program_body  go to state 36
    preamble      go to state 37


State 11

   10 module_unit: MODULE IDENTIFIER • module_body END MODULE IDENTIFIER
   11            | MODULE IDENTIFIER • module_body END MODULE

    $default  reduce using rule 19 (preamble)

    module_body  go to state 38
    preamble     go to state 39


State 12

    0 $accept: start $end •

    $default  accept


State 13

    4 compilation_units: compilation_units compilation_unit •

    $default  reduce using rule 4 (compilation_units)


State 14

   25 declaration: USE • identifier

    RESULT      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41

    identifier  go to state 42


State 15

   24 declaration: IMPLICIT • NONE

    NONE  shift, and go to state 43


State 16

   27 type_spec: INTEGER •

    $default  reduce using rule 27 (type_spec)


State 17

   28 type_spec: REAL •

    $default  reduce using rule 28 (type_spec)


State 18

   29 type_spec: LOGICAL •

    $default  reduce using rule 29 (type_spec)


State 19

   34 char_type_spec: CHARACTER • char_len_opt

    LPAREN  shift, and go to state 44

    $default  reduce using rule 35 (char_len_opt)

    char_len_opt  go to state 45


State 20

   31 type_spec: TYPE • LPAREN identifier RPAREN
  162 type_def: TYPE • DECL_SEP identifier type_def_body END_TYPE identifier

    LPAREN    shift, and go to state 46
    DECL_SEP  shift, and go to state 47


State 21

   32 type_spec: CLASS • identifier

    RESULT      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41

    identifier  go to state 48


State 22

   33 type_spec: COMPLEX •

    $default  reduce using rule 33 (type_spec)


State 23

  168 pp_define_undef: PP_DEFINE • identifier
  169                | PP_DEFINE • identifier INT_CONST

    RESULT      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41

    identifier  go to state 49


State 24

  170 pp_define_undef: PP_UNDEF • identifier

    RESULT      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41

    identifier  go to state 50


State 25

  171 pp_if_block: PP_IFDEF • identifier declarations pp_else_opt PP_ENDIF

    RESULT      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41

    identifier  go to state 51


State 26

  172 pp_if_block: PP_IFNDEF • identifier declarations pp_else_opt PP_ENDIF

    RESULT      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41

    identifier  go to state 52


State 27

  173 pp_if_block: PP_IF • identifier declarations pp_else_opt PP_ENDIF
  174            | PP_IF • INT_CONST declarations pp_else_opt PP_ENDIF

    RESULT      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41
    INT_CONST   shift, and go to state 53

    identifier  go to state 54


State 28

    7 free_form: preamble declarations • executables

    $default  reduce using rule 69 (executables)

    executables  go to state 55


State 29

   20 preamble: preamble pp_item •

    $default  reduce using rule 20 (preamble)


State 30

   18 declarations: declaration • declarations

    USE        shift, and go to state 14
    IMPLICIT   shift, and go to state 15
    INTEGER    shift, and go to state 16
    REAL       shift, and go to state 17
    LOGICAL    shift, and go to state 18
    CHARACTER  shift, and go to state 19
    TYPE       shift, and go to state 20
    CLASS      shift, and go to state 21
    COMPLEX    shift, and go to state 22

    $default  reduce using rule 17 (declarations)

    declarations    go to state 56
    declaration     go to state 30
    type_spec       go to state 31
    char_type_spec  go to state 32
    type_def        go to state 33


State 31

   23 declaration: type_spec • declaration_attributes DECL_SEP declarator_list

    COMMA  shift, and go to state 57

    $default  reduce using rule 48 (declaration_attributes)

    declaration_attributes  go to state 58


State 32

   30 type_spec: char_type_spec •

    $default  reduce using rule 30 (type_spec)


State 33

   26 declaration: type_def •

    $default  reduce using rule 26 (declaration)


State 34

   21 pp_item: pp_define_undef •

    $default  reduce using rule 21 (pp_item)


State 35

   22 pp_item: pp_if_block •

    $default  reduce using rule 22 (pp_item)


State 36

    8 program_unit: PROGRAM IDENTIFIER program_body • END PROGRAM IDENTIFIER
    9             | PROGRAM IDENTIFIER program_body • END PROGRAM

    END  shift, and go to state 59


State 37

   12 program_body: preamble • declarations executables contains_block
   20 preamble: preamble • pp_item

    USE        shift, and go to state 14
    IMPLICIT   shift, and go to state 15
    INTEGER    shift, and go to state 16
    REAL       shift, and go to state 17
    LOGICAL    shift, and go to state 18
    CHARACTER  shift, and go to state 19
    TYPE       shift, and go to state 20
    CLASS      shift, and go to state 21
    COMPLEX    shift, and go to state 22
    PP_DEFINE  shift, and go to state 23
    PP_UNDEF   shift, and go to state 24
    PP_IFDEF   shift, and go to state 25
    PP_IFNDEF  shift, and go to state 26
    PP_IF      shift, and go to state 27

    $default  reduce using rule 17 (declarations)

    declarations     go to state 60
    pp_item          go to state 29
    declaration      go to state 30
    type_spec        go to state 31
    char_type_spec   go to state 32
    type_def         go to state 33
    pp_define_undef  go to state 34
    pp_if_block      go to state 35


State 38

   10 module_unit: MODULE IDENTIFIER module_body • END MODULE IDENTIFIER
   11            | MODULE IDENTIFIER module_body • END MODULE

    END  shift, and go to state 61


State 39

   13 module_body: preamble • declarations executables contains_block
   20 preamble: preamble • pp_item

    USE        shift, and go to state 14
    IMPLICIT   shift, and go to state 15
    INTEGER    shift, and go to state 16
    REAL       shift, and go to state 17
    LOGICAL    shift, and go to state 18
    CHARACTER  shift, and go to state 19
    TYPE       shift, and go to state 20
    CLASS      shift, and go to state 21
    COMPLEX    shift, and go to state 22
    PP_DEFINE  shift, and go to state 23
    PP_UNDEF   shift, and go to state 24
    PP_IFDEF   shift, and go to state 25
    PP_IFNDEF  shift, and go to state 26
    PP_IF      shift, and go to state 27

    $default  reduce using rule 17 (declarations)

    declarations     go to state 62
    pp_item          go to state 29
    declaration      go to state 30
    type_spec        go to state 31
    char_type_spec   go to state 32
    type_def         go to state 33
    pp_define_undef  go to state 34
    pp_if_block      go to state 35


State 40

  161 identifier: RESULT •

    $default  reduce using rule 161 (identifier)


State 41

  160 identifier: IDENTIFIER •

    $default  reduce using rule 160 (identifier)


State 42

   25 declaration: USE identifier •

    $default  reduce using rule 25 (declaration)


State 43

   24 declaration: IMPLICIT NONE •

    $default  reduce using rule 24 (declaration)


State 44

   36 char_len_opt: LPAREN • LENGTH_SPECIFIER ASSIGN char_len_value RPAREN

    LENGTH_SPECIFIER  shift, and go to state 63


State 45

   34 char_type_spec: CHARACTER char_len_opt •

    $default  reduce using rule 34 (char_type_spec)


State 46

   31 type_spec: TYPE LPAREN • identifier RPAREN

    RESULT      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41

    identifier  go to state 64


State 47

  162 type_def: TYPE DECL_SEP • identifier type_def_body END_TYPE identifier

    RESULT      shift, and go to state 40
    IDENTIFIER  shift, and go to state 41

    identifier  go to state 65


State 48

   32 type_spec: CLASS identifier •

    $default  reduce using rule 32 (type_spec)


State 49

  168 pp_define_undef: PP_DEFINE identifier •
  169                | PP_DEFINE identifier • INT_CONST

    INT_CONST  shift, and go to state 66

    $default  reduce using rule 168 (pp_define_undef)


State 50

  170 pp_define_undef: PP_UNDEF identifier •

    $default  reduce using rule 170 (pp_define_undef)


State 51

  171 pp_if_block: PP_IFDEF identifier • declarations pp_else_opt PP_ENDIF

    USE        shift, and go to state 14
    IMPLICIT   shift, and go to state 15
    INTEGER    shift, and go to state 16
    REAL       shift, and go to state 17
    LOGICAL    shift, and go to state 18
    CHARACTER  shift, and go to state 19
    TYPE       shift, and go to state 20
    CLASS      shift, and go to state 21
    COMPLEX    shift, and go to state 22

    $default  reduce using rule 17 (declarations)

    declarations    go to state 67
    declaration     go to state 30
    type_spec       go to state 31
    char_type_spec  go to state 32
    type_def        go to state 33


State 52

  172 pp_if_block: PP_IFNDEF identifier • declarations pp_else_opt PP_ENDIF

    USE        shift, and go to state 14
    IMPLICIT   shift, and go to state 15
    INTEGER    shift, and go to state 16
    REAL       shift, and go to state 17
    LOGICAL    shift, and go to state 18
    CHARACTER  shift, and go to state 19
    TYPE       shift, and go to state 20
    CLASS      shift, and go to state 21
    COMPLEX    shift, and go to state 22

    $default  reduce using rule 17 (declarations)

    declarations    go to state 68
    declaration     go to state 30
    type_spec       go to state 31
    char_type_spec  go to state 32
    type_def        go to state 33


State 53

  174 pp_if_block: PP_IF INT_CONST • declarations pp_else_opt PP_ENDIF

    USE        shift, and go to state 14
    IMPLICIT   shift, and go to state 15
    INTEGER    shift, and go to state 16
    REAL       shift, and go to state 17
    LOGICAL    shift, and go to state 18
    CHARACTER  shift, and go to state 19
    TYPE       shift, and go to state 20
    CLASS      shift, and go to state 21
    COMPLEX    shift, and go to state 22

    $default  reduce using rule 17 (declarations)

    declarations    go to state 69
    declaration     go to state 30
    type_spec       go to state 31
    char_type_spec  go to state 32
    type_def        go to state 33


State 54

  173 pp_if_block: PP_IF identifier • declarations pp_else_opt PP_ENDIF

    USE        shift, and go to state 14
    IMPLICIT   shift, and go to state 15
    INTEGER    shift, and go to state 16
    REAL       shift, and go to state 17
    LOGICAL    shift, and go to state 18
    CHARACTER  shift, and go to state 19
    TYPE       shift, and go to state 20
    CLASS      shift, and go to state 21
    COMPLEX    shift, and go to state 22

    $default  reduce using rule 17 (declarations)

    declarations    go to state 70
    declaration     go to state 30
    type_spec       go to state 31
    char_type_spec  go to state 32
    type_def        go to state 33


State 55

    7 free_form: preamble declarations executables •
   70 executables: executables • executable

    IF          shift, and go to state 71
    DO          shift, and go to state 72
    SELECT      shift, and go to state 73
    STOP        shift, and go to state 74
    PRINT       shift, and go to state 75
    CALL        shift, and go to state 76
    RETURN      shift, and go to state 77
    RESULT      shift, and go to state 40
    ALLOCATE    shift, and go to state 78
    DEALLOCATE  shift, and go to state 79
    IDENTIFIER  shift, and go to state 41

    $default  reduce using rule 7 (free_form)

    executable        go to state 80
    assignment_stmt   go to state 81
    if_stmt           go to state 82
    do_stmt           go to state 83
    dowhile_stmt      go to state 84
    select_stmt       go to state 85
    select_rank_stmt  go to state 86
    call_stmt         go to state 87
    return_stmt       go to state 88
    stop_stmt         go to state 89
    pointer_stmt      go to state 90
    print_stmt        go to state 91
    allocate_stmt     go to state 92
    deallocate_stmt   go to state 93
    variable_ref      go to state 94
    identifier        go to state 95


State 56

   18 declarations: declaration declarations •

    $default  reduce using rule 18 (declarations)


State 57

   49 declaration_attributes: COMMA • attributes

    POINTER      shift, and go to state 96
    TARGET       shift, and go to state 97
    ALLOCATABLE  shift, and go to state 98
    INTENT       shift, and go to state 99

    attributes  go to state 100
    attribute   go to state 101


State 58

   23 declaration: type_spec declaration_attributes • DECL_SEP declarator_list

    DECL_SEP  shift, and go to state 102


State 59

    8 program_unit: PROGRAM IDENTIFIER program_body END • PROGRAM IDENTIFIER
    9             | PROGRAM IDENTIFIER program_body END • PROGRAM

    PROGRAM  shift, and go to state 103


State 60

   12 program_body: preamble declarations • executables contains_block

    $default  reduce using rule 69 (executables)

    executables  go to state 104


State 61

   10 module_unit: MODULE IDENTIFIER module_body END • MODULE IDENTIFIER
   11            | MODULE IDENTIFIER module_body END • MODULE

    MODULE  shift, and go to state 105


State 62

   13 module_body: preamble declarations • executables contains_block

    $default  reduce using rule 69 (executables)

    executables  go to state 106


State 63

   36 char_len_opt: LPAREN LENGTH_SPECIFIER • ASSIGN char_len_value RPAREN

    ASSIGN  shift, and go to state 107


State 64

   31 type_spec: TYPE LPAREN identifier • RPAREN

    RPAREN  shift, and go to state 108


State 65

  162 type_def: TYPE DECL_SEP identifier • type_def_body END_TYPE identifier

    INTEGER    shift, and go to state 16
    REAL       shift, and go to state 17
    LOGICAL    shift, and go to state 18
    CHARACTER  shift, and go to state 19
    TYPE       shift, and go to state 109
    CLASS      shift, and go to state 21
    COMPLEX    shift, and go to state 22

    $default  reduce using rule 163 (type_def_body)

    type_spec              go to state 110
    char_type_spec         go to state 32
    type_def_body          go to state 111
    type_def_declarations  go to state 112
    type_def_declaration   go to state 113


State 66

  169 pp_define_undef: PP_DEFINE identifier INT_CONST •

    $default  reduce using rule 169 (pp_define_undef)


State 67

  171 pp_if_block: PP_IFDEF identifier declarations • pp_else_opt PP_ENDIF

    PP_ELSE  shift, and go to state 114

    $default  reduce using rule 175 (pp_else_opt)

    pp_else_opt  go to state 115


State 68

  172 pp_if_block: PP_IFNDEF identifier declarations • pp_else_opt PP_ENDIF

    PP_ELSE  shift, and go to state 114

    $default  reduce using rule 175 (pp_else_opt)

    pp_else_opt  go to state 116


State 69

  174 pp_if_block: PP_IF INT_CONST declarations • pp_else_opt PP_ENDIF

    PP_ELSE  shift, and go to state 114

    $default  reduce using rule 175 (pp_else_opt)

    pp_else_opt  go to state 117


State 70

  173 pp_if_block: PP_IF identifier declarations • pp_else_opt PP_ENDIF

    PP_ELSE  shift, and go to state 114

    $default  reduce using rule 175 (pp_else_opt)

    pp_else_opt  go to state 118


State 71

   87 if_stmt: IF • LPAREN expression RPAREN THEN $@3 executables ELSE $@4 executables ENDIF

    LPAREN  shift, and go to state 119


State 72

   89 do_stmt: DO • IDENTIFIER ASSIGN expression COMMA expression step_opt $@5 executables END DO
   92 dowhile_stmt: DO • WHILE LPAREN $@6 expression RPAREN $@7 executables END DO
